--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main>
       <nav class="nav">
         <a class="link-nav" href="messi-work.html"><b>my best works</b></a>
-        <a class="link-nav" href="about.html"><b>about the author</b></a>
+        <a class="link-nav" href="about.html"><b>useful informations</b></a>
       </nav>
       <h1>Web-sites<br/> developer</h1>
       <p>HTML and CSS and Figma</p>
