--- a/messi.html
+++ b/messi.html
@@ -16,8 +16,8 @@
         <li>I enjoy making websites</li>
         <li>I like eating</li>
       </ul>
-      <img src="" width="830px" height="550px"/>
-      <img src="" width="830px" height="300px"/>
+      <img src="algorimith/dice-7846350_640.webp" width="830px" height="550px"/>
+      <img src="algorimith/rock.jpeg" width="830px" height="300px"/>
     </main>
     <footer>
      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"class="social" width="100px" height="100px"/>
