--- a/about.html
+++ b/about.html
@@ -31,9 +31,10 @@
       <p>Online HTML/CSS editor <a  class="link-text" href="https://www.w3schools.com/tryit/"><b>w3schools</b></a></p>
     </main>
     <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
-    </footer>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"class="social" width="100px" height="100px"/>
+       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiE4tumuvRUZKLMe9Cs0_PjWPlWIl9t1BmMQ&s" class="social" width="100px" height="100px"/>
+     <img src="https://cdn-icons-png.flaticon.com/256/174/174854.png" class="social" width="100px" height="100px"/>
+       <img src="https://camo.githubusercontent.com/b9714180de7437a8f4da9f998b998101ce0d73cef3df55b0c0400cecc219e348/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6373732d332e737667" class="social" width="100px" height="100px"/>
+     </footer>
   </body>
 </html>
