--- a/messi-work.html
+++ b/messi-work.html
@@ -16,11 +16,14 @@
       <p><a class="link-text" href="https://www.figma.com/file/IPijLWHOj5PtZhxP4aHCEx/M5L4-Project?node-id=0%3A1"><b>Layout</b></a> of a multi-page website created in Figma</p>
         <p><a class="link-text" href="https://translations-algo.github.io/ws-eng-m5l4-1/"><b>Website</b></a> of the Samoylov family; page making according to a layout, margins</p>
         <p>Bonus: <a class="link-text" href="https://translations-algo.github.io/wc-eng-m4l3/"><b>Website</b></a> of an eSports tournament</p>
+        <a href="https://nguyendangminhkiet.wixsite.com/prime"><img src="algorimith/primweb.png" width="700px" height="500px"/></a>
+        <a href="https://nguyendangminhkiet.wixsite.com/messitaco"><img src="algorimith/Tacoo.png" width="700px" height="500px"/></a>
     </main>
     <footer>
-      <a class="social" href=""><img src="/uploads/2021/04/social1_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/Group%201_0_1618254571.png" width="100px" height="100px"/></a>
-      <a class="social" href=""><img src="/uploads/2021/04/social3_0_1618254571.png" width="100px" height="100px"/></a>
-    </footer>
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/33/Figma-logo.svg"class="social" width="100px" height="100px"/>
+       <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTiE4tumuvRUZKLMe9Cs0_PjWPlWIl9t1BmMQ&s" class="social" width="100px" height="100px"/>
+     <img src="https://cdn-icons-png.flaticon.com/256/174/174854.png" class="social" width="100px" height="100px"/>
+       <img src="https://camo.githubusercontent.com/b9714180de7437a8f4da9f998b998101ce0d73cef3df55b0c0400cecc219e348/68747470733a2f2f63646e2e776f726c64766563746f726c6f676f2e636f6d2f6c6f676f732f6373732d332e737667" class="social" width="100px" height="100px"/>
+     </footer>
   </body>
 </html>
